--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "botframework-webchat": "^4.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^159.0.0",
     "install": "^0.13.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
