feat: integrate framer-motion for enhanced UI animations and update app metadata
- Added framer-motion library for animation effects.
- Updated app title and description to reflect RPA Automation platform.
- Refactored message rendering to use RenderBubble component with animations.
- Created AttachmentPreview component for handling attachments with animations.
- Enhanced Sidebar component with motion effects for smoother transitions.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "botframework-webchat": "^4.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "googleapis": "^159.0.0",
     "install": "^0.13.0",
     "lucide-react": "^0.542.0",
