--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "botframework-directlinejs": "^0.15.6",
     "botframework-webchat": "^4.18.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "nuqs": "^2.6.0",
     "p-defer-es5": "^2.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
